--- a/AgendaTCC/composer.json
+++ b/AgendaTCC/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "prettus/l5-repository": "2.6.18"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
